--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <!-- Title -->
         <h1>Milan Zítka</h1>
 
-        <!-- Short Bio
-        <p>LittleLink is an open source DIY alternative to services like <a href="https://linktr.ee" target="_blank" rel="noopener">Linktree</a> and <a href="https://many.link" target="_blank" rel="noopener">many.link</a>. LittleLink was built using <a href="http://www.getskeleton.com" target="_blank" rel="noopener">Skeleton</a>, a dead simple, responsive boilerplate—we've just created some branded buttons and stripped out the things you won't need. 😊</p>
- -->
+        <!-- Short Bio -->
+        <p>I compose, perform, and develop for the web. I'm an introvert, but you can find me online at</p>
+        
         <!--
 
           ## Breaking down <a> attributes:
