--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <h1>Milan Zítka</h1>
         <p>I compose, perform, and develop for the web. I'm an introvert, but you can find me online at</p>
 
+        <a class="button button-web" href="https://milanzitka.cz" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/web.svg" alt="Web Logo">Website
+        </a>
+        <br>
+        
         <a class="button button-instagram" href="https://instagram.com/milanzitkacz" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
         <br>
@@ -42,10 +47,6 @@
             <img class="icon" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
         <br>
 
-        <!-- Web
-        <a class="button button-web" href="https://milanzitka.cz" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/web.svg" alt="Web Logo">Website</a>
-        <br>
 
         <!-- Spotify
         <a class="button button-spotify" href="#" target="_blank" rel="noopener">
